feat: 모달 창 나가기 기능 수정 및 카카오 로그인 UI추가

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,5 +15,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="//developers.kakao.com/sdk/js/kakao.js"></script>
   </body>
 </html>
