[Feat] ui 테마 지정, 일부 컴포넌트 수정

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,20 +1,26 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/spoparty.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SPOPARTY</title>
-    <style>
-      body {
-        margin:0px;
-        padding:0px;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-    <script src="//developers.kakao.com/sdk/js/kakao.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="src/assets/spo-icon.png" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&family=Roboto:wght@500&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SPOPARTY</title>
+  <style>
+    body {
+      margin: 0px;
+      padding: 0px;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+  <script src="//developers.kakao.com/sdk/js/kakao.js"></script>
+</body>
+
 </html>
