작업사항 업로드

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
+  
   <meta charset="UTF-8" />
+  
   <link rel="icon" type="image/png" href="src/assets/spo-icon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,6 +20,7 @@
 </head>
 
 <body>
+  <script>var global = globalThis;</script>
   <script type="module" src="/src/main.js"></script>
   <script src="//developers.kakao.com/sdk/js/kakao.js"></script>
   <div id="app"></div>
