--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
   
   <meta charset="UTF-8" />
   
-  <link rel="icon" type="image/x-icon" href="src/assets/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&family=Roboto:wght@500&display=swap" rel="stylesheet">
